--- a/config.env
+++ b/config.env
@@ -1,8 +1,6 @@
-DB_NAME=musixmatch
-DB=mongodb+srv://ptom84:<password>@cluster0.lwwkg.mongodb.net/<dbname>?retryWrites=true&w=majority
-DB_PASSWORD=TvpWLuyAIzIckCZk
+DB_NAME=fullstackmovies
+DB=mongodb+srv://ptom84:<password>@cluster0.prvic.mongodb.net/<dbname>?retryWrites=true&w=majority
+DB_PASSWORD=XhWKQCQk7ApvW2AK
 
 
 PORT=4000
-
-API_KEY=b70ce190190a14bfe6018efee0fa630c
