--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "node-fetch": "^2.6.1"
@@ -13,7 +15,8 @@
   "devDependencies": {},
   "scripts": {
     "start-dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "seed": "node db/seed.js"
   },
   "repository": {
     "type": "git",
