--- a/config.env
+++ b/config.env
@@ -2,5 +2,9 @@ DB_NAME=fullstackmovies
 DB=mongodb+srv://ptom84:<password>@cluster0.prvic.mongodb.net/<dbname>?retryWrites=true&w=majority
 DB_PASSWORD=XhWKQCQk7ApvW2AK
 
+JWT_EXPIRY=90d
+JWT_COOKIE_EXPIRY=90
+JWT_SECRET=on-my-command-unleash-hell-glory-gladiator
+
 
 PORT=4000
