--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {},
   "scripts": {
