--- a/config.env
+++ b/config.env
@@ -6,5 +6,7 @@ JWT_EXPIRY=90d
 JWT_COOKIE_EXPIRY=90
 JWT_SECRET=on-my-command-unleash-hell-glory-gladiator
 
+SEED_PASSWORD=abcdefghijk
+
 
 PORT=4000
