--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {},
   "scripts": {
@@ -27,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/churchjg/FullStackMern/issues"
   },
-  "homepage": "https://github.com/churchjg/FullStackMern#readme"
+  "homepage": "https://github.com/churchjg/FullStackMern#readme",
+  "engines": {
+    "node": "^12"
+  }
 }
